add newsletter form

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -45,6 +45,7 @@
 @import 'vendor/cf7';
 @import 'vendor/toc-plus';
 @import 'vendor/cookie-notice';
+@import 'vendor/convertkit';
 
 /**
  * Page template specific styles
